objects/nFORCE__Workflow__c.object
<CustomObject>
    <description>This object defines the workflow that the system runs to orchestrate business activities. This process may consist of one or more steps that the user or system runs to complete a business process.</description>
    <fields>
        <fullName>nFORCE__Key__c</fullName>
        <description>The user manually populates this unique text field to provide an identifier for the system to locate the workflow. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a unique name in this field. Use this field to easily identify your workflow as you continue the workflow configuration process.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Orchestration_Type__c</fullName>
        <description>The user manually populates this picklist field to indicate how the steps run in the workflow. Some possible options include Single Transaction, Multiple Transactions (Queued), and Multiple Transactions (UI Orchestrated).</description>
        <inlineHelpText>Select the desired orchestration type for your workflow.</inlineHelpText>
        <label>Orchestration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>nFORCE.WorkflowPerExeContextOrchestrator</fullName>
                    <label>Single Transaction</label>
                </value>
                <value>
                    <fullName>nFORCE.StepPerQueueJobOrchestrator</fullName>
                    <label>Multiple Transactions (Queued)</label>
                </value>
                <value>
                    <fullName>nFORCE.StepPerExeContextOrchestrator</fullName>
                    <label>Multiple Transactions (UI Orchestrated)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The system automatically generates this number field with the External ID for the workflow object.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID for the associated workflow.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Workflow</label>
    <listViews>
        <fullName>nFORCE__All_Workflows</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Key__c</columns>
        <columns>nFORCE__Orchestration_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Workflows</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>